--- a/task3/index.html
+++ b/task3/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JS-Start. 3 задача</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="/task3/style.css">
     </head>
     <body>
         <a href="../index.html">к списку заданий</a>
@@ -15,6 +15,6 @@
             <div class="trafficLight" color="yellow"></div>
             <div class="trafficLight" color="green"></div>
         </div>
-        <script src="script.js"></script>
+        <script src="/task3/script.js"></script>
     </body>
 </html>
