--- a/task4/index.html
+++ b/task4/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JS-Start. 4 задача</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/task4/style.css">
     </head>
     <body>
         <a href="../index.html">к списку заданий</a>
@@ -15,6 +15,6 @@
             текст <span>ссылки</span> по клику на нее <br>
         </h2>
         <a href="#" id="link">Измените текст ссылки</a>
-        <script src="script.js"></script>
+        <script src="/task4/script.js"></script>
     </body>
 </html>
