--- a/task1/index.html
+++ b/task1/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JS-Start. 1 задача</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/task1/style.css">
     </head>
     <body>
         <a href="../index.html">к списку заданий</a>
@@ -13,5 +13,5 @@
         <p>Посмотри в консоль, там что-то важное</p>
     </body>
     
-        <script src="script.js"></script>
+        <script src="/task1/script.js"></script>
 </html>
