--- a/task2/index.html
+++ b/task2/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JS-Start. 2 задача</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/task2/style.css">
     </head>
     <body>
         <a href="../index.html">к списку заданий</a>
@@ -23,6 +23,6 @@
         <code>
             prompt('Введите свой номер карты');
         </code>
-        <script src="script.js"></script>
+        <script src="/task2/script.js"></script>
     </body>
 </html>
