--- a/task5/index.html
+++ b/task5/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>JS-Start. 5 задача</title>
-        <link rel="stylesheet" href="/task5/style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <a href="../index.html">к списку заданий</a>
@@ -23,6 +23,6 @@
         <hr>
         <p>Введенный текст:</p>
         <p id="duplicateField"></p>
-        <script src="/task5/script.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
