--- a/task3/index.html
+++ b/task3/index.html
@@ -11,9 +11,9 @@
         <a href="../index.html">к списку заданий</a>
         <hr>
         <div class="container">
-            <div class="trafficLight" color="red"></div>
-            <div class="trafficLight" color="yellow"></div>
-            <div class="trafficLight" color="green"></div>
+            <div class="trafficLight" color="red" id="one"></div>
+            <div class="trafficLight" color="yellow" id="two"></div>
+            <div class="trafficLight" color="green" id="tree"></div>
         </div>
         <script src="script.js"></script>
     </body>
